--- a/styles/less/variables.less
+++ b/styles/less/variables.less
@@ -6,7 +6,6 @@
 @grey-light: #F5F5F5;
 
 // Breakpoints
-
 @max-width-xs: 375px;
 @max-width-s: 500px;
 @max-width-m: 900px;
@@ -14,3 +13,7 @@
 
 @min-width-xs: 300px;
 @min-width-s: @max-width-xs + 1;
+@min-width-m: @max-width-s + 1;
+@min-width-l: @max-width-m + 1;
+@min-width-xl: @max-width-l + 1;
+
