--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,18 +1,94 @@
-.header__top {
-  display: flex;
-  justify-content: space-between;
-  background-color: #F5F5F5;
+h1 {
+  font-size: 46px;
+  line-height: 46px;
 }
+h2 {
+  font-size: 40px;
+  line-height: 55px;
+}
+h3 {
+  font-size: 26px;
+  line-height: 55px;
+}
+h4 {
+  font-size: 24px;
+  line-height: 32.68px;
+}
+h5 {
+  font-size: 16px;
+  line-height: 21.79px;
+}
+p {
+  font-size: 14px;
+  line-height: 19.62px;
+}
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  color: #ffffffff;
+  line-height: 16.34px;
+}
+.button {
+  font-family: 'Open Sans', sans-serif;
+  color: #ffffffff;
+  background-color: #00000000;
+  padding: 10px 15px;
+  border: #ffffffff 2px solid;
+  border-radius: 20px;
+}
+input {
+  font-family: 'Open Sans', sans-serif;
+  color: #ffffffff;
+  background-color: #00000000;
+  padding: 10px 15px;
+  border: #ffffffff 2px solid;
+  border-radius: 20px;
+}
+input:focus {
+  outline: none;
+}
+.header {
+  position: fixed;
+  width: 100%;
+  height: 98px;
+}
+.header__top,
 .header__bottom {
   display: flex;
   justify-content: space-between;
-  background-color: #151F2A;
+  align-items: center;
+  height: 28px;
+  background-color: #F5F5F5ff;
+  box-sizing: border-box;
+  padding: 0 60px;
+}
+.header__bottom {
+  height: 70px;
+  background-color: #151F2Aff;
+}
+.header__menu,
+.header__search {
+  display: inline-block;
 }
 .header__list-item {
   display: inline-block;
-  color: #6A6A6A;
+  font-weight: 600;
+  color: #6A6A6Aff;
   padding: 0 15px;
+}
+.header__list-item p {
+  color: #ffffffff;
+}
+.header__list-item span {
+  padding: 0 5px;
+}
+.header__list img {
+  color: #6A6A6Aff;
 }
 .header__socials .header__list-item {
   padding: 0 2px;
+}
+.main {
+  background-color: #ffffffff;
+  padding: 98px 60px 0;
 }
